# wikijs-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml
.github/: dependabot.yml  labeler.yml  labeller.yml
.github/workflows/: audit.yml  commits.yml  general.yml  label.yml  linting.yml  stale.yml  test.yml  testing.yml  wiki.yml
.vim/: coc-settings.json
gql/: schema.graphql  schema2.graphql
gql/query/: .gitignore  analytics_provider_list.graphql  asset_folder_list.graphql  comment_list.graphql  contributor_list.graphql  fetch_all_pages.graphql  get_contribute_contributor.graphql  get_page.graphql  get_page_tree.graphql  list_all_page_tags.graphql  list_all_pages.graphql  list_contribute_contributors.graphql  list_contribute_contributors.rs  login.graphql  page_create.graphql  page_delete.graphql  page_get.graphql  page_tag_list.graphql  page_tree.graphql  page_update.graphql  system_flag_list.graphql  user_delete.graphql  user_get.graphql  user_list.graphql  user_tfa_enable.graphql  user_verify.graphql
gql/query/analytics/: analytics_provider_update.graphql
gql/query/asset/: asset_delete.graphql  asset_folder_create.graphql  asset_list.graphql  asset_rename.graphql  asset_temp_upload_flush.graphql
gql/query/authentication/: api_key_create.graphql  api_key_list.graphql  api_key_revoke.graphql  api_state_get.graphql  api_state_set.graphql  authentication_active_strategy_list.graphql  authentication_certificate_regenerate.graphql  authentication_strategy_list.graphql  authentication_strategy_update.graphql  guest_user_reset.graphql  login.graphql  login_password_change.graphql  login_tfa.graphql  password_forgot.graphql  register.graphql
gql/query/comment/: comment_create.graphql  comment_delete.graphql  comment_get.graphql  comment_provider_list.graphql  comment_provider_update.graphql  comment_update.graphql
gql/query/group/: group_create.graphql  group_delete.graphql  group_get.graphql  group_list.graphql  group_update.graphql  group_user_assign.graphql  group_user_unassign.graphql
gql/query/localization/: locale_download.graphql  locale_list.graphql  locale_update.graphql  localization_config_get.graphql  translation_list.graphql
gql/query/logging/: logger_list.graphql  logger_update.graphql
gql/query/mail/: mail_config_get.graphql  mail_config_update.graphql  mail_send_test.graphql
gql/query/navigation/: navigation_config_get.graphql  navigation_config_update.graphql  navigation_tree_get.graphql  navigation_tree_update.graphql
gql/query/page/: page_cache_flush.graphql  page_conflict_check.graphql  page_conflict_latest.graphql  page_convert.graphql  page_get_by_path.graphql  page_get_minimal.graphql  page_get_updated_at.graphql  page_history_get.graphql  page_history_purge.graphql  page_link_list.graphql  page_list.graphql  page_migrate_to_locale.graphql  page_move.graphql  page_render.graphql  page_restore.graphql  page_search.graphql  page_tag_delete.graphql  page_tag_update.graphql  page_tree_get.graphql  page_tree_rebuild.graphql  page_update_content.graphql  page_version_get.graphql
gql/query/rendering/: renderer_list.graphql  renderer_update.graphql
gql/query/search/: search_engine_index_rebuild.graphql  search_engine_list.graphql  search_engine_update.graphql
gql/query/site/: site_config_get.graphql  site_config_update.graphql
gql/query/storage/: storage_action_execute.graphql  storage_status_get.graphql  storage_target_list.graphql  storage_target_update.graphql
gql/query/system/: system_export.graphql  system_export_status_get.graphql  system_extension_list.graphql  system_flags_update.graphql  system_https_certificate_renew.graphql  system_https_redirection_set.graphql  system_info_get.graphql  system_status_export.graphql  system_telemetry_client_id_reset.graphql  system_telemetry_set.graphql  system_upgrade_perform.graphql  system_user_import_from_v1.graphql
gql/query/theming/: theme_config_get.graphql  theme_config_update.graphql  theme_list.graphql
gql/query/user/: user_activate.graphql  user_create.graphql  user_deactivate.graphql  user_search.graphql  (+7 more)
scripts/: deb_package.sh  finalize_wiki_setup.sh
src/: authentication.rs  error.rs  lib.rs  page.rs
src/cli/: analytics.rs  asset.rs  authentication.rs  comment.rs  common.rs  contribute.rs  group.rs  localization.rs  logger.rs  main.rs  page.rs  system.rs  theming.rs  user.rs
src/fuse/: main.rs  page.rs
src/lib/: analytics.rs  asset.rs  authentication.rs  comment.rs  common.rs  contribute.rs  error.rs  group.rs  lib.rs  localization.rs  logging.rs  mail.rs  navigation.rs  page.rs  rendering.rs  search.rs  site.rs  storage.rs  system.rs  theming.rs  user.rs
tests/: assets.rs  cli.rs  common.rs  contribute.rs  main.rs  page.rs
tests/cli/: h_flag.toml  help_cmd.toml  help_command.stdout  help_flag.toml  no_args.stderr  no_args.toml  unknown_arg.stderr  unknown_arg.toml  unknown_cmd.stderr  unknown_cmd.toml
