[package]
name = "wikijs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib/lib.rs"

[[bin]]
name = "wikijs-fuse"
path = "src/fuse/main.rs"
required-features = ["fuse"]

[[bin]]
name = "wikijs-cli"
path = "src/cli/main.rs"
required-features = ["cli"]

[features]
fuse = ["fuser", "clap", "clap-verbosity-flag", "colored", "log", "stderrlog", "libc"]
cli = ["clap", "colored"]

[dependencies]
# lib
graphql_client = { version = "0.13", features = ["reqwest-blocking"] }
serde = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1.0"
# lib and cli
tabled = "0.14"
# cli and fuse
clap = { version = "4.4", features = ["derive", "env"], optional = true }
colored = { version = "2.0", optional = true }
# fuse
fuser = { version = "0.13", optional = true }
clap-verbosity-flag = { version = "2.0", optional = true }
log = { version = "0.4", optional = true }
stderrlog = { version = "0.5", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
# lib
lazy_static = "1.4"
serial_test = "2.0"
