[package]
name = "wikijs"
description = "API bindings, CLI client and FUSE filesystem for Wiki.js written in Rust."
authors = ["Sandro-Alessio Gierens <sandro@gierens.de>"]
categories = ["api-bindings", "command-line-utilities", "filesystem"]
edition = "2021"
homepage = "https://github.com/gierens/wikijs-rs"
repository = "https://github.com/gierens/wikijs-rs"
exclude = ["/gql/*", "/logo/*", "/scripts/*", "/tests/*", "docker-compose.yml", "/Makefile"]
readme = "README.md"
license = "AGPLv3"
version = "0.1.0-rc0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib/lib.rs"

[[bin]]
name = "wikijs-fuse"
path = "src/fuse/main.rs"
required-features = ["fuse"]

[[bin]]
name = "wikijs-cli"
path = "src/cli/main.rs"
required-features = ["cli"]

[features]
fuse = ["fuser", "clap", "clap-verbosity-flag", "colored", "log", "stderrlog", "libc"]
cli = ["clap", "colored", "tempfile", "tabled"]

[dependencies]
# lib
graphql_client = { version = "0.13", features = ["reqwest-blocking"] }
serde = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
thiserror = "1.0"
# cli and fuse
clap = { version = "4.4", features = ["derive", "env"], optional = true }
colored = { version = "2.0", optional = true }
# fuse
fuser = { version = "0.13", optional = true }
clap-verbosity-flag = { version = "2.0", optional = true }
log = { version = "0.4", optional = true }
stderrlog = { version = "0.5", optional = true }
libc = { version = "0.2", optional = true }
# cli
tabled = { version = "0.14", optional = true }
tempfile = { version = "3.8", optional = true }

[dev-dependencies]
# lib
lazy_static = "1.4"
serial_test = "2.0"
