[package]
name = "wikijs"
description = "API bindings, CLI client and FUSE filesystem for Wiki.js written in Rust."
authors = ["Sandro-Alessio Gierens <sandro@gierens.de>"]
categories = ["api-bindings", "command-line-utilities", "filesystem"]
edition = "2021"
homepage = "https://github.com/gierens/wikijs-rs"
repository = "https://github.com/gierens/wikijs-rs"
exclude = ["/gql/*", "/logo/*", "/scripts/*", "/tests/*", "docker-compose.yml", "/Makefile"]
readme = "README.md"
license = "AGPL-3.0"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib/lib.rs"

[[bin]]
name = "wikifs"
path = "src/fuse/main.rs"
required-features = ["fuse"]

[[bin]]
name = "wikijs"
path = "src/cli/main.rs"
required-features = ["cli"]

[features]
fuse = ["fuser", "clap", "clap-verbosity-flag", "colored", "log", "stderrlog", "libc", "chrono"]
cli = ["clap", "colored", "tempfile", "tabled"]
vendored-tls = ["reqwest/native-tls-vendored"]

[dependencies]
# lib
graphql_client = { version = "0.14", features = ["reqwest-blocking"] }
serde = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
thiserror = "2.0"
# cli and fuse
clap = { version = "4.4", features = ["derive", "env"], optional = true }
colored = { version = "3.0", optional = true }
# fuse
fuser = { version = "0.15", optional = true }
clap-verbosity-flag = { version = "3.0", optional = true }
log = { version = "0.4", optional = true }
stderrlog = { version = "0.6", optional = true }
libc = { version = "0.2", optional = true }
chrono = { version = "0.4", optional = true }
# cli
tabled = { version = "0.18", optional = true }
tempfile = { version = "3.8", optional = true }

[dev-dependencies]
# lib
lazy_static = "1.4"
serial_test = "3.0"
# cli
trycmd = "0.15"
